<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name_inquiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_inquiry_name"/>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"/>

        <TextView
            android:id="@+id/name_req"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sysmsg_required"
            android:visibility="invisible"/>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/dob_inquiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_inquiry_dateofbirth"/>

        <EditText
            android:id="@+id/dob_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:inputType="date"/>

        <TextView
            android:id="@+id/dob_req"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sysmsg_required"
            android:visibility="invisible"/>
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/gender_inquiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_inquiry_gender"/>

        <LinearLayout
            android:id="@+id/gender_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:padding="2dp"
                android:id="@+id/male_image"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:maxHeight="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sysmsg_pictures"/>

            <ImageView
                android:padding="2dp"
                android:adjustViewBounds="true"
                android:id="@+id/female_image"
                android:layout_width="match_parent"
                android:maxHeight="80dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sysmsg_pictures"/>

            <ImageView
                android:padding="2dp"
                android:id="@+id/other_image"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:maxHeight="80dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sysmsg_pictures"/>
        </LinearLayout>

      <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/email_inquiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_inquiry_email"/>

        <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/control_clear"
            />
        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/control_submit"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>